--- a/bank_deposit_nb_knn.ipynb
+++ b/bank_deposit_nb_knn.ipynb
@@ -16,14 +16,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
         },
         "id": "HSmxY2SJaRu9",
-        "outputId": "5a0e7649-eb1f-4465-9427-b8a73ae7e56f"
+        "outputId": "f57b5148-cc0d-4661-97e9-832a6582f7ac"
       },
       "outputs": [
         {
@@ -34,9 +34,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-ddea138c-1136-4650-922a-5fa136fe190b\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-7a3059c4-8d79-491d-bdae-eadc9c274ab8\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-ddea138c-1136-4650-922a-5fa136fe190b\">\n",
+              "     <output id=\"result-7a3059c4-8d79-491d-bdae-eadc9c274ab8\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -256,9 +256,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "an8IZHD7aVgE",
-        "outputId": "02d0f33f-74ed-4a34-c36d-fcb6dae56922"
+        "outputId": "12c5666d-2696-4474-e6de-e0c1cb454f3f"
       },
-      "execution_count": 138,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,9 +339,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5520ab7b-c29a-426f-bd6e-eae79cd43af4"
+        "outputId": "8c2fad52-d235-475b-bef1-cb86c1e5681d"
       },
-      "execution_count": 139,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -382,9 +382,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NLYw5VKS2V7A",
-        "outputId": "4449d120-d0ec-4c61-8b46-74d64be66751"
+        "outputId": "80213e77-3192-4b3c-e605-2bdeebdb7aaf"
       },
-      "execution_count": 140,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +394,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 140
+          "execution_count": 4
         }
       ]
     },
@@ -408,9 +408,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3B23p6NxvW5P",
-        "outputId": "e36f1f12-b289-4e93-9b53-68caa927d94b"
+        "outputId": "b45fa076-5129-4ead-9189-3e15388eac73"
       },
-      "execution_count": 141,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -422,7 +422,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 141
+          "execution_count": 5
         }
       ]
     },
@@ -444,7 +444,7 @@
       "metadata": {
         "id": "9FZ1rqWevXf9"
       },
-      "execution_count": 142,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -458,9 +458,9 @@
           "height": 363
         },
         "id": "anOwup2ivYx0",
-        "outputId": "488002ba-0410-47e8-9c94-0e1341a9b827"
+        "outputId": "954db413-0c59-4bc4-d4c3-15b2aac0d75f"
       },
-      "execution_count": 145,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -492,7 +492,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6d92c6c7-18bc-4af8-a4e6-9994b28ee0e8\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-46e0b06c-88a1-4430-b2f6-6b484cd1f577\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -737,7 +737,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6d92c6c7-18bc-4af8-a4e6-9994b28ee0e8')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-46e0b06c-88a1-4430-b2f6-6b484cd1f577')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -789,12 +789,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6d92c6c7-18bc-4af8-a4e6-9994b28ee0e8 button.colab-df-convert');\n",
+              "        document.querySelector('#df-46e0b06c-88a1-4430-b2f6-6b484cd1f577 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6d92c6c7-18bc-4af8-a4e6-9994b28ee0e8');\n",
+              "        const element = document.querySelector('#df-46e0b06c-88a1-4430-b2f6-6b484cd1f577');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -814,8 +814,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-17183953-a7a6-420b-bd24-d22d9ea1e69c\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-17183953-a7a6-420b-bd24-d22d9ea1e69c')\"\n",
+              "<div id=\"df-5d01e79a-637a-4fb2-9b73-b7b9a47c7588\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5d01e79a-637a-4fb2-9b73-b7b9a47c7588')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -934,7 +934,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-17183953-a7a6-420b-bd24-d22d9ea1e69c button');\n",
+              "        document.querySelector('#df-5d01e79a-637a-4fb2-9b73-b7b9a47c7588 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -951,7 +951,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 145
+          "execution_count": 7
         }
       ]
     },
@@ -965,9 +965,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iZPFzbMc2leU",
-        "outputId": "bb2c903e-c6ff-481d-c3b3-045759951778"
+        "outputId": "ed6f1e87-4939-42dc-8210-bbd12d09d1c7"
       },
-      "execution_count": 146,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -977,7 +977,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 146
+          "execution_count": 8
         }
       ]
     },
@@ -996,9 +996,9 @@
           "height": 754
         },
         "id": "Z1O70bb21VIf",
-        "outputId": "5932198c-8db3-4c84-e1c9-d8511dc4b1ae"
+        "outputId": "9afbf6cd-2096-4c6d-cb6c-8a2364e0502f"
       },
-      "execution_count": 167,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1029,9 +1029,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TRsQU84CvZH9",
-        "outputId": "5a67dbcd-78f0-4cbd-960c-8ab4517212b4"
+        "outputId": "66fcbeb3-944b-4fa3-9a1e-1f10a6aea3aa"
       },
-      "execution_count": 149,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1109,9 +1109,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HvAuiVFq2tRm",
-        "outputId": "c2d3ef54-7666-481a-dbf1-a2ce38fe993c"
+        "outputId": "52686d75-5164-4185-b33e-1185172e0733"
       },
-      "execution_count": 151,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -1144,9 +1144,9 @@
           "height": 410
         },
         "id": "VbiH8SPQ3Xde",
-        "outputId": "653133ad-9282-4a31-af32-9d87bc0af07a"
+        "outputId": "1e0112e3-fb4c-44d4-9218-f4822524dec8"
       },
-      "execution_count": 152,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1184,9 +1184,9 @@
           "height": 564
         },
         "id": "Hdnr9mPA2zql",
-        "outputId": "2b01b7ad-e498-4016-980f-0ca46a38ce9f"
+        "outputId": "71bf066f-83ee-49f6-dc39-2905e206aa59"
       },
-      "execution_count": 155,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1240,9 +1240,9 @@
           "height": 564
         },
         "id": "aUU3VZ-b23_m",
-        "outputId": "b9a6c95a-9579-4744-a86a-0dc6295e745e"
+        "outputId": "6b5ce41f-cbe8-4f84-9d92-67b404322cdf"
       },
-      "execution_count": 156,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1298,9 +1298,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8JT8vuPF3eKE",
-        "outputId": "8313deab-582d-412e-9cd0-5d4c0ef68549"
+        "outputId": "83676395-c82d-4afc-8ca1-8b00b493e13a"
       },
-      "execution_count": 158,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1333,9 +1333,9 @@
           "height": 410
         },
         "id": "PtrpeMEGDgjP",
-        "outputId": "c3595390-8dbe-4daa-9188-50a25f108926"
+        "outputId": "7bee7665-909a-4a4c-ea73-53b2e31e1689"
       },
-      "execution_count": 162,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1399,9 +1399,9 @@
           "height": 847
         },
         "id": "vp-mxd4JDzqX",
-        "outputId": "fae8dcbe-9201-4fef-f93e-6817fad7583c"
+        "outputId": "0869d6a0-c1f7-4cd5-c74e-2aa49857eeac"
       },
-      "execution_count": 181,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1436,9 +1436,73 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "model = tf.keras.Sequential([\n",
+        "    tf.keras.layers.Dense(64, activation='relu', input_shape=(X_train.shape[1],)),\n",
+        "    tf.keras.layers.Dense(32, activation='relu'),\n",
+        "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
+        "])\n",
+        "\n",
+        "model.compile(optimizer='adam',\n",
+        "              loss='binary_crossentropy',\n",
+        "              metrics=['accuracy', tf.keras.metrics.Precision(), tf.keras.metrics.Recall()])\n",
+        "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.2, random_state=42)\n",
+        "history = model.fit(X_train, y_train, epochs=10, batch_size=32, validation_data=(X_val, y_val))\n",
+        "loss, accuracy, precision, recall = model.evaluate(X_test, y_test)\n",
+        "\n",
+        "print(\"Test Loss:\", loss)\n",
+        "print(\"Test Accuracy:\", accuracy)\n",
+        "print(\"Test Precision:\", precision)\n",
+        "print(\"Test Recall:\", recall)\n"
+      ],
+      "metadata": {
+        "id": "yish6-UVD8kP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "686a7246-ece5-4b45-d783-0e8d522ddf5b"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "3/3 [==============================] - 2s 275ms/step - loss: 0.6962 - accuracy: 0.4875 - precision_1: 0.5745 - recall_1: 0.5625 - val_loss: 0.7102 - val_accuracy: 0.3500 - val_precision_1: 0.3571 - val_recall_1: 0.5556\n",
+            "Epoch 2/10\n",
+            "3/3 [==============================] - 0s 47ms/step - loss: 0.6832 - accuracy: 0.5375 - precision_1: 0.5965 - recall_1: 0.7083 - val_loss: 0.7073 - val_accuracy: 0.4000 - val_precision_1: 0.4118 - val_recall_1: 0.7778\n",
+            "Epoch 3/10\n",
+            "3/3 [==============================] - 0s 42ms/step - loss: 0.6731 - accuracy: 0.5875 - precision_1: 0.6087 - recall_1: 0.8750 - val_loss: 0.7054 - val_accuracy: 0.3500 - val_precision_1: 0.3889 - val_recall_1: 0.7778\n",
+            "Epoch 4/10\n",
+            "3/3 [==============================] - 0s 43ms/step - loss: 0.6677 - accuracy: 0.6000 - precision_1: 0.6026 - recall_1: 0.9792 - val_loss: 0.7040 - val_accuracy: 0.4500 - val_precision_1: 0.4500 - val_recall_1: 1.0000\n",
+            "Epoch 5/10\n",
+            "3/3 [==============================] - 0s 34ms/step - loss: 0.6586 - accuracy: 0.6000 - precision_1: 0.6000 - recall_1: 1.0000 - val_loss: 0.7039 - val_accuracy: 0.4500 - val_precision_1: 0.4500 - val_recall_1: 1.0000\n",
+            "Epoch 6/10\n",
+            "3/3 [==============================] - 0s 40ms/step - loss: 0.6534 - accuracy: 0.6000 - precision_1: 0.6000 - recall_1: 1.0000 - val_loss: 0.7050 - val_accuracy: 0.4500 - val_precision_1: 0.4500 - val_recall_1: 1.0000\n",
+            "Epoch 7/10\n",
+            "3/3 [==============================] - 0s 31ms/step - loss: 0.6489 - accuracy: 0.6000 - precision_1: 0.6000 - recall_1: 1.0000 - val_loss: 0.7069 - val_accuracy: 0.4500 - val_precision_1: 0.4500 - val_recall_1: 1.0000\n",
+            "Epoch 8/10\n",
+            "3/3 [==============================] - 0s 33ms/step - loss: 0.6458 - accuracy: 0.6000 - precision_1: 0.6000 - recall_1: 1.0000 - val_loss: 0.7096 - val_accuracy: 0.4500 - val_precision_1: 0.4500 - val_recall_1: 1.0000\n",
+            "Epoch 9/10\n",
+            "3/3 [==============================] - 0s 28ms/step - loss: 0.6429 - accuracy: 0.6000 - precision_1: 0.6000 - recall_1: 1.0000 - val_loss: 0.7120 - val_accuracy: 0.4500 - val_precision_1: 0.4500 - val_recall_1: 1.0000\n",
+            "Epoch 10/10\n",
+            "3/3 [==============================] - 0s 28ms/step - loss: 0.6392 - accuracy: 0.6000 - precision_1: 0.6000 - recall_1: 1.0000 - val_loss: 0.7143 - val_accuracy: 0.4500 - val_precision_1: 0.4500 - val_recall_1: 1.0000\n",
+            "1/1 [==============================] - 0s 35ms/step - loss: 0.7892 - accuracy: 0.3500 - precision_1: 0.3500 - recall_1: 1.0000\n",
+            "Test Loss: 0.7892329096794128\n",
+            "Test Accuracy: 0.3499999940395355\n",
+            "Test Precision: 0.3499999940395355\n",
+            "Test Recall: 1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "yish6-UVD8kP"
+        "id": "Iq0H6EhvO3qp"
       },
       "execution_count": null,
       "outputs": []
